modified control points, added in scaling to found points

--- a/arduino/control.html
+++ b/arduino/control.html
@@ -1,8 +1,8 @@
 <html><head></head>
 <body>
-<br><a href="http://192.168.1.124/?x=0&y=20">0,20</a>
-<br><a href="http://192.168.1.124/?x=90&y=150">90,150</a>
-<br><a href="http://192.168.1.124/?x=179&y=90">179,90</a>
-<br><a href="http://192.168.1.124/?x=45&y=135">45,135</a>
+<br><a href="http://192.168.1.125/?x=0&y=0">0,20</a>
+<br><a href="http://192.168.1.125/?x=640&y=0">90,150</a>
+<br><a href="http://192.168.1.125/?x=0&y=0">179,90</a>
+<br><a href="http://192.168.1.125/?x=&y=480">45,135</a>
 </body>
 </html>
